refactor [Code Insight]: PyInitNewSignatureInspection - refactor the implementation a bit and add `type` class to ignored
Other type-checkers also skip this check for custom metaclasses

GitOrigin-RevId: 1ff7bb86d61f3adadd736d4b2767ed1f6b2ae2ca